--- a/HRTools_v2/Views/MainWindow.xaml
+++ b/HRTools_v2/Views/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         FontSize="{DynamicResource MainFontSize}"
         Background="{DynamicResource Background}"
+        Foreground="DarkSlateGray"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         xmlns:converters="clr-namespace:HRTools_v2.Converters"
